--- a/index_en.html
+++ b/index_en.html
@@ -74,21 +74,21 @@
                                 <nav class="c-mega-menu c-mega-menu-onepage c-pull-right c-mega-menu-dark c-mega-menu-dark-mobile c-fonts-uppercase c-fonts-bold" data-onepage-animation-speed="700">
                                     <ul class="nav navbar-nav c-theme-nav">
                                         <li class="c-onepage-link c-active active">
-                                            <a href="#about" class="c-link">О нас</a>
+                                            <a href="#about" class="c-link">About</a>
                                         </li>
                                         <li class="c-onepage-link ">
-                                            <a href="#services" class="c-link">Услуги и решения</a>
+                                            <a href="#services" class="c-link">Services</a>
                                         </li>
                                         <li class="c-onepage-link ">
-                                            <a href="#partners" class="c-link">Партнеры</a>
+                                            <a href="#partners" class="c-link">Partners</a>
                                         </li>
                                         <li class="c-onepage-link ">
-                                            <a href="#clients" class="c-link">Наши клиенты</a>
+                                            <a href="#clients" class="c-link">Clients</a>
                                         </li>
                                         <li class="c-onepage-link">
-                                            <a href="#contact" class="c-link">Контакты</a>
+                                            <a href="#contact" class="c-link">Contacts</a>
                                         </li>
-                                        <li class="c-active c-menu-type-classic" id="langMenu"><a href="./index.html" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="./index_en.html">EN</a></li></ul></li>
+                                        <li class="c-active c-menu-type-classic" id="langMenu"><a href="./index_en.html" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="./index.html">RU</a></li></ul></li>
                                     </ul>
                                 </nav>
                                 <!-- END: MEGA MENU -->
@@ -115,7 +115,7 @@
                                             <img alt="" src="./assets/base/img/content/backgrounds/datacenter.jpg" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat">
                                             <div class="tp-caption customin customout" data-x="center" data-y="center" data-hoffset="" data-voffset="-50" data-speed="500" data-start="1000" data-transform_idle="o:1;" data-transform_in="rX:0.5;scaleX:0.75;scaleY:0.75;o:0;s:500;e:Back.easeInOut;"
                                             data-transform_out="rX:0.5;scaleX:0.75;scaleY:0.75;o:0;s:600;e:Back.easeInOut;" data-splitin="none" data-splitout="none" data-elementdelay="0.1" data-endelementdelay="0.1" data-endspeed="600">
-                                                <h3 class="c-main-title-circle c-font-48 c-font-bold c-font-center c-font-uppercase c-font-white c-block">IT решения для вашего бизнеса</h3>
+                                                <h3 class="c-main-title-circle c-font-48 c-font-bold c-font-center c-font-uppercase c-font-white c-block">IT Solutions for business</h3>
                                             </div>
                                             <div class="tp-caption lft" data-x="center" data-y="center" data-voffset="110" data-speed="900" data-start="2000" data-transform_idle="o:1;" data-transform_in="x:100;y:100;rX:120;scaleX:0.75;scaleY:0.75;o:0;s:900;e:Back.easeInOut;"
                                             data-transform_out="x:100;y:100;rX:120;scaleX:0.75;scaleY:0.75;o:0;s:900;e:Back.easeInOut;">
@@ -135,11 +135,11 @@
                                     <div class="c-content-feature-10">
                                         <!-- Begin: Title 1 component -->
                                         <div class="c-content-title-1">
-                                            <h3 class="c-font-uppercase c-center c-font-bold">О нас</h3>
+                                            <h3 class="c-font-uppercase c-center c-font-bold">About</h3>
                                             <div class="c-line-center c-theme-bg"></div>
                                         </div>
                                         <!-- End-->
-                                        <p class="c-font-center">Компания G-Itech занимается внедрением IT решений в Казахстане и Турции.Компания обладает обширным опытом и глубокой экспертизой в таких областях IT как лицензирование программного обеспечения, виртуализация, облачные сервисы, информационная безопасность, техническая поддержка и аутсорсинг, обучение и сертификация, коммуникации и совместная работа, поставка аппаратных решений, управление бизнес-процессами, управление программными и IT-активами.</p>
+                                        <p class="c-font-center">G-ITech is engaged in the implementation of IT solutions in Kazakhstan and Turkey. The company has extensive experience and deep expertise in such areas of IT as software licensing, virtualization, cloud services, information security, technical support and outsourcing, training and certification, communications and collaboration , delivery of hardware solutions, business process management, software and IT asset management.</p>
                                     </div>
                                 </div>
                             </div>
@@ -151,33 +151,33 @@
   <div class="c-content-box c-size-md c-bg-grey">
                 <div class="container">
                     <div class="c-content-title-1 c-center">
-                        <h3 class="c-font-uppercase c-font-bold">Услуги и решения</h3>
+                        <h3 class="c-font-uppercase c-font-bold">Services</h3>
                         <div class="c-line-center"></div>
                     </div>
                     <div class="row">
                         <div class="col-sm-4 wow animate fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                             <ul class="c-content-list-1 c-theme c-separator-dot c-font-uppercase">
-                                <li>Информационная безопасность</li>
-                                <li>Устойчивость бизнеса</li>
+                                <li>Information Security</li>
+                                <li>Business sustainability</li>
                             </ul>
                         </div>
                         <div class="col-sm-4 wow animate fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                             <ul class="c-content-list-1 c-theme c-separator-dot c-font-uppercase">
-                                <li>Сетевые решения</li>
-                                <li>Решения для хранения данных</li>
-                                <li>Сешения для настольных компьютеров</li>
-                                <li>Виртуализация</li>
-                                <li>Серверные решения</li>
-                                <li>Решения для резервного копирования</li>
+                                <li>Network solutions</li>
+                                <li>Storage solutions</li>
+                                <li>Desktop pc solutions</li>
+                                <li>Virtualization</li>
+                                <li>Servers</li>
+                                <li>Backup solutions</li>
                             </ul>
                         </div>
                         <div class="col-sm-4 wow animate fadeInUp" data-wow-delay="0.4s" style="visibility: visible; animation-delay: 0.4s; animation-name: fadeInUp;">
                             <ul class="c-content-list-1 c-theme c-separator-dot c-font-uppercase">
-                                <li>Управление бизнес услугами</li>
-                                <li>Услуги по управлению проектами</li>
-                                <li>Сопровождение и поддержка</li>
-                                <li>Управление жизненным циклом приложений</li>
-                                <li>Разработка ПО</li>
+                                <li>Business services management</li>
+                                <li>Project management services</li>
+                                <li>Maintenance and support</li>
+                                <li>Application lifecycle management</li>
+                                <li>Software development</li>
                             </ul>
                         </div>
                     </div>
@@ -189,7 +189,7 @@
                             <div class="container">
                                 <div class="row">
                                 	<div class="c-content-title-1 c-center">
-                                            <h3 class="c-font-uppercase c-font-bold">Партнеры</h3>
+                                            <h3 class="c-font-uppercase c-font-bold">Partners</h3>
                                         </div>
                                     <div class="col-sm-6 wow  fadeInLeft animated" style="visibility: visible; animation-name: fadeInLeft;">
                                         <!-- Begin: Title 1 component -->
@@ -281,7 +281,7 @@
                                     <div class="c-content-person-1-slider" data-slider="owl" data-items="3" data-auto-play="8000">
                                         <!-- Begin: Title 1 component -->
                                         <div class="c-content-title-1">
-                                            <h3 class="c-center c-font-uppercase c-font-bold">Наши клиенты</h3>
+                                            <h3 class="c-center c-font-uppercase c-font-bold">Clients</h3>
                                             <div class="c-line-center c-theme-bg"></div>
                                         </div>
                                         <!-- End-->
@@ -450,18 +450,18 @@
                                                             <div class="col-sm-6">
                                                                 <div class="c-body">
                                                                     <div class="c-section">
-                                                                        <h3>Контакты</h3>
+                                                                        <h3>Contacts</h3>
                                                                     </div>
                                                                     <div class="c-section">
-                                                                        <div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Астана</div>
-                                                                        <p>ул. Туран, 20
+                                                                        <div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Astana</div>
+                                                                        <p>Turan str., 20
                                                                             <br>info@g-itech.com.kz
                                                                             <br>+7 702 481 62 72
                                                                             <br>+7 702 209 4433
                                                                         </p>
                                                                     </div>
                                                                     <div class="c-section">
-                                                                        <div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Стамбул</div>
+                                                                        <div class="c-content-label c-font-uppercase c-font-bold c-theme-bg">Istanbul</div>
                                                                         <p>
                                                                             +90 545 329 64 24
                                                                         </p>
