--- a/index.html
+++ b/index.html
@@ -534,14 +534,14 @@
                     {
                         App.init(); // init core
                         var address = window.location.pathname
-                        if (address==="/tr") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">TR<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li><li><a href="/en">EN</a></li></ul>')
-                        }
-                        if (address==="/en") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/tr">TR</a></li><li><a href="/">RU</a></li></ul>')
+//                         if (address==="/tr") {
+//                             $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">TR<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li><li><a href="/en">EN</a></li></ul>')
+//                         }
+                        if (address==="/index_en.html") {
+                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li></ul>')
                         }
                         if (address==="/") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/tr">TR</a></li><li><a href="/en">EN</a></li></ul>')
+                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><a href="/index_en.html">EN</a></li></ul>')
                         }
 
                     });
