--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                             $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li></ul>')
                         }
                         if (address==="/") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><a href="/index_en.html">EN</a></li></ul>')
+                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/index_en.html">EN</a></li></ul>')
                         }
 
                     });
