--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                             <!-- BEGIN: BRAND -->
                             <div class="c-navbar-wrapper clearfix">
                                 <div class="c-brand c-pull-left">
-                                    <a href="index-2.html" class="c-logo">
+                                    <a href="/" class="c-logo">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo-inverse">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-mobile-logo"> </a>
