--- a/index_en.html
+++ b/index_en.html
@@ -56,7 +56,7 @@
                             <!-- BEGIN: BRAND -->
                             <div class="c-navbar-wrapper clearfix">
                                 <div class="c-brand c-pull-left">
-                                    <a href="index-2.html" class="c-logo">
+                                    <a href="index_en.html" class="c-logo">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-desktop-logo-inverse">
                                         <img src="./assets/base/img/layout/logos/logo-3.png" alt="JANGO" class="c-mobile-logo"> </a>
@@ -534,14 +534,9 @@
                     {
                         App.init(); // init core
                         var address = window.location.pathname
-                        if (address==="/tr") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">TR<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li><li><a href="/en">EN</a></li></ul>')
-                        }
-                        if (address==="/en") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/tr">TR</a></li><li><a href="/">RU</a></li></ul>')
-                        }
-                        if (address==="/") {
-                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">RU<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/tr">TR</a></li><li><a href="/en">EN</a></li></ul>')
+                        
+                        if (address==="/index_en.html") {
+                            $('#langMenu').html('<a href="javascript:;" class="c-link dropdown-toggle">EN<span class="c-arrow c-toggler"></span></a><ul class="dropdown-menu c-menu-type-classic c-pull-left"><li><a href="/">RU</a></li></ul>')
                         }
 
                     });
