--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
                                                 <div class="row">
                                                     <div class="col-md-4 col-xs-6 c-logo c-logo-1">
                                                         <a href="#">
+                                                            <img class="c-img-pos" src="./assets/base/img/content/partners/payolog.png" alt="">
+                                                        </a>
+                                                    </div>
+
+                                                    <div class="col-md-4 col-xs-6 c-logo c-logo-1">
+                                                        <a href="#">
                                                             <img class="c-img-pos" src="./assets/base/img/content/partners/cisco.jpg" alt="">
                                                         </a>
                                                     </div>
