--- a/index_en.html
+++ b/index_en.html
@@ -197,6 +197,11 @@
                                                 <div class="row">
                                                     <div class="col-md-4 col-xs-6 c-logo c-logo-1">
                                                         <a href="#">
+                                                            <img class="c-img-pos" src="./assets/base/img/content/partners/payolog.png" alt="">
+                                                        </a>
+                                                    </div>
+                                                    <div class="col-md-4 col-xs-6 c-logo c-logo-1">
+                                                        <a href="#">
                                                             <img class="c-img-pos" src="./assets/base/img/content/partners/cisco.jpg" alt="">
                                                         </a>
                                                     </div>
@@ -275,171 +280,7 @@
 
             <section id="clients">
                             <!-- BEGIN: CONTENT/SLIDERS/TEAM-1 -->
-                            <div class="c-content-box c-size-md c-bg-white">
-                                <div class="container">
-                                    <!-- Begin: Testimonals 1 component -->
-                                    <div class="c-content-person-1-slider" data-slider="owl" data-items="3" data-auto-play="8000">
-                                        <!-- Begin: Title 1 component -->
-                                        <div class="c-content-title-1">
-                                            <h3 class="c-center c-font-uppercase c-font-bold">Clients</h3>
-                                            <div class="c-line-center c-theme-bg"></div>
-                                        </div>
-                                        <!-- End-->
-                                        <!-- Begin: Owlcarousel -->
-                                        <div class="owl-carousel owl-theme c-theme">
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/1.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/1.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/2.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/2.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/3.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/3.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/4.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/4.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/5.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/5.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/6.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/6.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/7.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/7.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/8.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/8.jpg" alt=""> </div>
-                                                    <div class="c-body">
-
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="item">
-                                                <div class="c-content-person-1">
-                                                    <div class="c-caption c-content-overlay">
-                                                        <div class="c-overlay-wrapper">
-                                                            <div class="c-overlay-content">
-                                                                <a href="./assets/base/img/references/9.jpg" data-lightbox="fancybox" data-fancybox-group="gallery-1">
-                                                                    <i class="icon-magnifier"></i>
-                                                                </a>
-                                                            </div>
-                                                        </div>
-                                                        <img class="c-overlay-object img-responsive" src="./assets/base/img/references/9.jpg" alt=""> </div>
-                                                    <div class="c-body">
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <!-- End-->
-                                    </div>
-                                    <!-- End-->
-                                </div>
-                            </div>
                             <!-- END: CONTENT/SLIDERS/TEAM-1 -->
-
-
-
                             <section id="contact">
                                             <!-- BEGIN: CONTENT/FEATURES/FEATURES-11 -->
                                             <div class="c-content-box c-size-md c-bg-parallax" style="background-image: url(./assets/base/img/content/backgrounds/datacenter.jpg)">
