--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
                     <div class="row">
                         <div class="col-sm-4 wow animate fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                             <ul class="c-content-list-1 c-theme c-separator-dot c-font-uppercase">
+                                <li>Платежные решения</li>
                                 <li>Информационная безопасность</li>
                                 <li>Устойчивость бизнеса</li>
                             </ul>
