--- a/index_en.html
+++ b/index_en.html
@@ -157,6 +157,7 @@
                     <div class="row">
                         <div class="col-sm-4 wow animate fadeInUp" style="visibility: visible; animation-name: fadeInUp;">
                             <ul class="c-content-list-1 c-theme c-separator-dot c-font-uppercase">
+                                <li>Payment solutions</li>
                                 <li>Information Security</li>
                                 <li>Business sustainability</li>
                             </ul>
